appId: net.jasonle.tjbot
name: Assert CourseLockedScreen
---
- runFlow:
    when:
      visible: "Open"
    commands:
      - tapOn: "Open"
- extendedWaitUntil:
    visible:
      text: ".*(Locked|Khóa|Course).*"
    timeout: 15000
- back
- waitForAnimationToEnd
