appId: net.jasonle.tjbot
name: Assert DeviceLostScreen
---
- runFlow:
    when:
      visible: "Open"
    commands:
      - tapOn: "Open"
- extendedWaitUntil:
    visible:
      text: ".*(Find|Tìm|Lost|thất lạc).*"
    timeout: 15000
- back
- waitForAnimationToEnd
