appId: net.jasonle.tjbot
name: Assert RobotStatusScreen
---
- runFlow:
    when:
      visible: "Open"
    commands:
      - tapOn: "Open"
- extendedWaitUntil:
    visible:
      text: ".*(Robot status|Trạng thái robot|status|Online|Offline).*"
    timeout: 15000
- back
- waitForAnimationToEnd
