appId: net.jasonle.tjbot
name: Assert SupportScreen
---
- runFlow:
    when:
      visible: "Open"
    commands:
      - tapOn: "Open"
- extendedWaitUntil:
    visible:
      text: ".*(Contact support|Hỗ trợ|Support).*"
    timeout: 15000
- back
- waitForAnimationToEnd
